# Descent3

lib/: mvelibw.h
libmve/: CMakeLists.txt  console.h  libmve.h  mve_main.cpp  mvelib.cpp  mvelib.h  mveplay.cpp
